--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@ionic/storage": "2.2.0",
     "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "cordova-android": "9.1.0",
     "cordova-android-firebase-gradle-release": "^1.0.3",
     "cordova-browser": "6.0.0",
     "cordova-plugin-actionsheet": "2.3.3",
@@ -66,7 +67,7 @@
     "zone.js": "0.8.29"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "^3.2.4",
+    "@ionic/app-scripts": "3.2.4",
     "@ionic/lab": "^3.2.10",
     "cordova-android-support-gradle-release": "^3.0.1",
     "cordova-plugin-device": "^2.0.2",
