--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "cordova-plugin-statusbar": "2.4.2",
     "cordova-plugin-whitelist": "1.3.3",
     "cordova-plugin-x-socialsharing": "5.6.4",
+    "cordova-support-google-services": "1.3.1",
     "es6-promise-plugin": "4.2.2",
     "ionic": "^4.9.0",
     "ionic-angular": "3.9.5",
@@ -61,12 +62,13 @@
     "ngx-pinch-zoom": "^1.2.5",
     "phonegap-plugin-barcodescanner": "^8.1.0",
     "phonegap-plugin-multidex": "^1.0.0",
+    "phonegap-plugin-push": "2.3.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.29"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "^3.2.4",
+    "@ionic/app-scripts": "3.2.4",
     "@ionic/lab": "^3.2.10",
     "cordova-android-support-gradle-release": "^3.0.1",
     "cordova-plugin-device": "^2.0.2",
@@ -74,7 +76,6 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-support-google-services": "^1.4.1",
     "typescript": "~2.6.2",
     "ws": "3.3.2"
   },
@@ -99,12 +100,16 @@
       "cordova-plugin-badge": {},
       "cordova-plugin-file-transfer": {},
       "cordova-plugin-file": {},
-      "cordova-support-google-services": {},
       "cordova-android-support-gradle-release": {
         "ANDROID_SUPPORT_VERSION": "27.+"
       },
       "cordova-plugin-actionsheet": {},
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "cordova-support-google-services": {},
+      "phonegap-plugin-push": {
+        "ANDROID_SUPPORT_V13_VERSION": "27.+",
+        "FCM_VERSION": "17.0.+"
+      }
     },
     "platforms": [
       "browser",
