--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@awesome-cordova-plugins/push": "^5.40.0",
     "@ionic-native/app-version": "^4.20.0",
     "@ionic-native/badge": "^4.0.0",
     "@ionic-native/barcode-scanner": "^4.0.0",
@@ -53,7 +54,6 @@
     "cordova-plugin-statusbar": "2.4.2",
     "cordova-plugin-whitelist": "1.3.3",
     "cordova-plugin-x-socialsharing": "5.6.4",
-    "cordova-support-google-services": "1.3.1",
     "es6-promise-plugin": "4.2.2",
     "ionic": "^4.9.0",
     "ionic-angular": "3.9.5",
@@ -76,6 +76,7 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-support-google-services": "^1.3.2",
     "typescript": "~2.6.2",
     "ws": "3.3.2"
   },
@@ -106,10 +107,7 @@
       "cordova-plugin-actionsheet": {},
       "cordova-plugin-camera": {},
       "cordova-support-google-services": {},
-      "phonegap-plugin-push": {
-        "ANDROID_SUPPORT_V13_VERSION": "27.+",
-        "FCM_VERSION": "17.0.+"
-      }
+      "phonegap-plugin-push": {}
     },
     "platforms": [
       "browser",
